--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-session-knex": "^1.4.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "knex": "^0.19.5",
     "sqlite3": "^4.1.0"
   }
